[package]
name = "async-mpd"
edition = "2018"
version = "0.6.0.1"
authors = ["Johan Kristell <johan@jott.se>", "kibax <kibax@kibax.de>"]
keywords = ["mpd"]
license = "MIT OR Apache-2.0"
description = "Async Mpd client library"
categories = ["network-programming"]
repository = "https://github.com/kibax/async-mpd.git"
readme = "README.md"

[features]
default = ["client"]
client = ["futures-lite", "async-net", "itertools", "log", "thiserror", "multimap", "async-trait"]

[dependencies]
async-net = { version = "1.5", optional = true }
itertools = { version = "0.10.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
log = { version = "0.4", optional = true }
chrono = { version = "0.4", features = ["serde"] }
thiserror = { version = "1.0", optional = true }
futures-lite = { version = "1.11", optional = true }
multimap = { version = "0.8", optional = true }
async-trait = { version = "0.1.48", optional = true }

[dev-dependencies]
structopt = "0.3"
femme = "2.1"
async-std = { version = "1.7", features = ["attributes"] }
tokio = { version = "1.0", features = ["full"] }
